--- a/WebsiteNewsDWNhom9/src/main/webapp/styles/desktop-8.css
+++ b/WebsiteNewsDWNhom9/src/main/webapp/styles/desktop-8.css
@@ -13,9 +13,11 @@ input {
 	border: none;
 }
 body {
-  width: 151.2rem;
+  width: 100%;
+  height: 100vh;
 }.desktop-8-pTi {
   width: 100%;
+  height: 100%;
   overflow: hidden;
   position: relative;
   display: flex;
@@ -133,6 +135,13 @@ body {
   white-space: nowrap;
   flex-shrink: 0;
 }
+.desktop-8-pTi .main .left .news-item-list{
+  display: flex;
+  height: 700px;
+  flex-direction: column;
+  gap: 10px;
+  overflow-y: scroll;
+}
 .desktop-8-pTi .main .left .news-item {
   margin-bottom: 4.9rem;
   box-sizing: border-box;
@@ -235,8 +244,8 @@ body {
   flex-shrink: 0;
 }
 .desktop-8-pTi .main .right .container-shadow {
-  width: 49.8rem;
-  height: 77.8rem;
+  width: 45rem;
+  height: 65rem;
   /*position: absolute;*/
   /*left: 0;*/
   /*top: 0;*/
@@ -268,6 +277,7 @@ body {
   font-family: Montserrat, 'Source Sans Pro';
   white-space: nowrap;
   flex-shrink: 0;
+  text-decoration: none;
 }
 .desktop-8-pTi .main .right .new-news .read-more-icon {
   width: 2.4rem;
@@ -286,6 +296,7 @@ body {
   font-weight: 700;
   line-height: 1.1725;
   color: #000000;
+  text-decoration: none;
   font-family: Roboto, 'Source Sans Pro';
   /*white-space: nowrap;*/
 }
@@ -315,7 +326,7 @@ body {
   font-family: Roboto, 'Source Sans Pro';
 }
 .desktop-8-pTi .main .right .new-news-img {
-  width: 50rem;
+  width: 100%;
   height: 34rem;
   /*position: absolute;*/
   /*left: 0;*/
