--- a/WebsiteNewsDWNhom9/src/main/webapp/styles/desktop-9.css
+++ b/WebsiteNewsDWNhom9/src/main/webapp/styles/desktop-9.css
@@ -13,11 +13,13 @@ input {
 	border: none;
 }
 body {
-  width: 151.2rem;
+  width: 100%;
+  height: 100vh;
 }.desktop-9-g7A {
   box-sizing: border-box;
   padding-right: 5.6rem;
-  width: 100%;
+   width: 100%;
+   height: 100%;
   overflow: hidden;
   position: relative;
   display: flex;
