--- a/WebsiteNewsDWNhom9/src/main/webapp/styles/desktop-8.css
+++ b/WebsiteNewsDWNhom9/src/main/webapp/styles/desktop-8.css
@@ -92,6 +92,7 @@ body {
   font-family: Roboto, 'Source Sans Pro';
   white-space: nowrap;
   flex-shrink: 0;
+  text-decoration: none;
 }
 .desktop-8-pTi .main {
   box-sizing: border-box;
