--- a/WebsiteNewsDWNhom9/src/main/webapp/styles/desktop-9.css
+++ b/WebsiteNewsDWNhom9/src/main/webapp/styles/desktop-9.css
@@ -23,6 +23,7 @@ body {
   overflow: hidden;
   position: relative;
   display: flex;
+
   /*align-items: center;*/
   background-color: #ffffff;
 }
@@ -100,6 +101,8 @@ body {
   margin-bottom: 2.7rem;
   width: 115.5rem;
   flex-shrink: 0;
+  height: 100%;
+  overflow-y: scroll;
 }
 .desktop-9-g7A .main .news-detail {
   margin-bottom: 2.1rem;
@@ -116,6 +119,16 @@ body {
   height: 47.4rem;
   display: flex;
   align-items: flex-start;
+}
+.news-kjz{
+  font-size: 2.4rem;
+  font-weight: 400;
+  line-height: 1.1725;
+  color: #ffffff;
+  font-family: Roboto, 'Source Sans Pro';
+  white-space: nowrap;
+  flex-shrink: 0;
+  text-decoration: none;
 }
 .desktop-9-g7A .main .main-top .news-detail-img {
   margin-right: 3.1rem;
